--- a/appid/create2.yaml
+++ b/appid/create2.yaml
@@ -3,7 +3,9 @@
 - name: Create APPID instance.
   hosts: localhost
   collections:
-   - ibm.cloudcollection
+    - name: https://github.com/IBM-Cloud/ansible-collection-ibm.git
+      type: git
+      version: main
   tasks:
   - name: Create a APPID instance
     ibm_resource_instance:
